# ipyreactflow

./: .gitignore  README.md  environment.yml  example.ipynb  hello-checkpoint.ipynb  hello.ipynb  hi.ipynb  marimo_color_picker.py  package-lock.json  package.json  pyproject.toml  vite.config.js
flowwidget/: __init__.py
flowwidget/static/: widget.js
js/: color_picker.css  color_picker.jsx  intersecting_nodes.css  intersecting_nodes.jsx  widget.css  widget.jsx
src/: App.jsx  edges.jsx  nodes.jsx  widget.jsx
src/ipyreactflow/: __init__.py
